--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "webpack --mode development"
+        "start": "npx webpack serve"
     },
     "author": "",
     "license": "ISC",
@@ -14,6 +14,7 @@
     "devDependencies": {
         "glob": "^10.2.2",
         "webpack": "^5.80.0",
-        "webpack-cli": "^5.0.2"
+        "webpack-cli": "^5.0.2",
+        "webpack-dev-server": "^4.13.3"
     }
 }
